# kf1_mods_installer

./: .gitignore  .justfile  LICENSE  README.md  RefreshRequirementsTextFile.bat  TestVirtualEnvironment.bat  __main__.py  kf1_mods_installer.spec  main.py  pyproject.toml  requirements.txt  settings.json
assets/base/: install_mods.bat  project_updater.bat
assets/build_scripts/kf1_mods_installer_developer_workspace/: MakeDevelopmentRelease.bat  RefreshRequirementsTextFile.bat  TestVirtualEnvironment.bat  UploadLatestToRepo.bat  VirtualEnvironmentSetup.bat
assets/dev_tools/: project_info.ini
src/kf1_mods_installer/: __main__.py  _version.py  cli.py  cli_py.py  log_colors.py  main.py
