[project]
name = "kf1-mods-installer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mythical-Github", email = "67753356+Mythical-Github@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "pyjson5>=1.6.9",
    "requests>=2.32.5",
]

[project.scripts]
kf1-mods-installer = "kf1_mods_installer:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
